--- a/package.json
+++ b/package.json
@@ -4,14 +4,20 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
+    "build:clean": "rm -rf dist && npm run build",
     "start": "npm run build && node dist/index.js",
     "dev": "ts-node src/index.ts",
-    "deploy": "serverless deploy",
-    "deploy:dev": "serverless deploy --stage dev",
-    "deploy:prod": "serverless deploy --stage prod",
+    "test:lambda": "npm run build && node test-lambda-local.js",
+    "test:handler": "npm run build && ts-node -e \"import('./dist/handler').then(h => console.log('Handler loaded successfully'))\"",
+    "deploy": "npm run build && serverless deploy",
+    "deploy:dev": "npm run build && serverless deploy --stage dev",
+    "deploy:prod": "npm run build && serverless deploy --stage prod",
     "local": "serverless offline",
+    "invoke:local": "npm run build && serverless invoke local -f scrapeSponsored",
     "logs": "serverless logs -f scrapeSponsored",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "logs:tail": "serverless logs -f scrapeSponsored --tail",
+    "check": "tsc --noEmit",
+    "test": "npm run check && npm run test:handler"
   },
   "keywords": [],
   "author": "",
