--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "declarationMap": true,
     "sourceMap": true,
     "moduleResolution": "node",
-    "types": ["node"]
+    "types": ["node", "jest"]
   },
   "include": [
     "src/**/*"
