--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "build": "tsc",
     "build:clean": "rm -rf dist && npm run build",
     "start": "npm run build && node dist/index.js",
-    "test:handler": "npm run build && ts-node -e \"import('./dist/handler').then(h => console.log('Handler loaded successfully'))\"",
+    "test:handler": "npm run build && ts-node -e \"import('./dist/lambda-handler').then(h => console.log('Handler loaded successfully'))\"",
     "deploy": "npm run build && serverless deploy",
     "deploy:dev": "npm run build && serverless deploy --stage dev",
     "deploy:prod": "npm run build && serverless deploy --stage prod",
     "local": "serverless offline",
-    "invoke:local": "npm run build && serverless invoke local -f scrapeSponsored",
-    "logs": "serverless logs -f scrapeSponsored",
-    "logs:tail": "serverless logs -f scrapeSponsored --tail",
+    "invoke:local": "npm run build && serverless invoke local -f scrapeAmazonSponsoredProducts",
+    "logs": "serverless logs -f scrapeAmazonSponsoredProducts",
+    "logs:tail": "serverless logs -f scrapeAmazonSponsoredProducts --tail",
     "check": "tsc --noEmit",
     "test": "jest",
     "test:watch": "jest --watch",
