--- a/package.json
+++ b/package.json
@@ -17,10 +17,10 @@
     "test": "jest"
   },
   "dependencies": {
+    "@sparticuz/chromium": "^137.0.1",
     "@types/aws-lambda": "^8.10.150",
     "@types/node": "^24.0.10",
-    "chrome-aws-lambda": "^10.1.0",
-    "puppeteer-core": "^10.4.0",
+    "puppeteer-core": "^23.6.1",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
